# cpp-expression-tree

./: CMakeLists.txt  LICENSE  README.md
docs/: a_quick_example_expression_tree.drawio
include/attwoodn/: expression_tree.hpp
include/expression_tree/: expression_tree.hpp
tests/: CMakeLists.txt  examples.cpp  expression_tree.cpp  expression_tree_leaf_node.cpp  expression_tree_op_node.cpp  make_expr_safety.cpp  operators.cpp  release_asserts.hpp  test.cpp  test_utils.hpp
